--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.35.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
+    "terser": "^5.44.0",
     "vite": "^5.4.8"
   }
 }
