--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,5 +10,8 @@ SUPABASE_SERVICE_ROLE_KEY=<your-supabase-service-role-key>
 STRIPE_SECRET_KEY=<your-stripe-secret-key>
 STRIPE_WEBHOOK_SECRET=<your-stripe-webhook-secret>
 
+# Meta (Facebook) API configuration
+META_API_KEY=<your-meta-api-key>
+
 # Domain of your frontend application.  Used to set CORS and absolute URLs in emails
 FRONTEND_URL=http://localhost:5173
