--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,8 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@react-three/drei": "^9.88.13",
-    "@react-three/fiber": "^8.15.19",
+    "@react-three/drei": "9.122.0",
+    "@react-three/fiber": "8.18.0",
     "@supabase/supabase-js": "^2.45.3",
     "chart.js": "^4.5.0",
     "framer-motion": "^11.2.10",
@@ -30,7 +30,7 @@
     "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.2",
-    "three": "^0.182.0"
+    "three": "0.169.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
