--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,8 @@ jspm_packages/
 
 # Gatsby files
 .cache/
-public
+# Don't ignore frontend/public (needed for static assets like GLB models)
+# public
 
 # Storybook build outputs
 .out
